# inkarms

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: advanced_tool_use.md  cli_reference.md  configuration.md  github_copilot.md  index.md  platforms.md  security.md  skill_authoring.md  tui_guide.md  user_guide.md
src/inkarms/: __init__.py  __main__.py
src/inkarms/agent/: __init__.py  loop.py  models.py  parser.py
src/inkarms/audit/: __init__.py  logger.py
src/inkarms/cli/: __init__.py  app.py  output.py
src/inkarms/cli/commands/: __init__.py  audit.py  config.py  memory.py  platforms.py  profile.py  run.py  skill.py  status.py  tools.py
src/inkarms/config/: __init__.py  loader.py  merger.py  providers.py  schema.py  setup.py  theme.py  updater.py  wizard.py
src/inkarms/config/defaults/: config_wizard.yaml  providers.yaml
src/inkarms/config/wizard/: __init__.py  core.py
src/inkarms/config/wizard/ui/: rich_wizard.py
src/inkarms/memory/: __init__.py  compaction.py  context.py  handoff.py  manager.py  models.py  storage.py
src/inkarms/providers/: __init__.py  cost.py  exceptions.py  fallback.py  manager.py  models.py
src/inkarms/secrets/: __init__.py  manager.py
src/inkarms/security/: __init__.py  sandbox.py  whitelist.py
src/inkarms/skills/: __init__.py  index.py  loader.py  manager.py  models.py  parser.py
src/inkarms/storage/: __init__.py  paths.py
src/inkarms/tools/: __init__.py  base.py  metrics.py  models.py  registry.py
src/inkarms/tools/builtin/: __init__.py  bash.py  file.py  git.py  http.py  python.py  registry_utils.py  search.py
src/inkarms/tui/: __init__.py  app.py
src/inkarms/tui/screens/: advanced.py  chat.py  quickstart.py  wizard.py
src/inkarms/ui/: __init__.py  factory.py  protocol.py  rich_backend.py  session_persistence.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_advanced_tools.py
tests/unit/: __init__.py  test_agent_models.py  test_agent_parser.py  test_audit_logger.py  test_cli.py  test_config.py  test_memory.py  test_platforms_models.py  test_platforms_processor.py  test_platforms_rate_limiter.py  test_platforms_router.py  test_platforms_session_mapper.py  test_providers.py  test_security_sandbox.py  test_security_whitelist.py  test_skills.py  test_tools_base.py  test_tools_builtin_bash.py  test_tools_builtin_file.py  test_tools_builtin_http.py  test_tools_builtin_python.py  test_tools_builtin_search.py  test_tools_registry.py
